--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 
   <div class="row">
   	<div class="col-lg text-center d-none animate__animated animate__pulse" id="slideSatu">
-  		<h3>Jangan Lupa ikuti Sosmed Aldi Ya! :</h3>
-  		<button class="btn btn-primary"><a href="https://www.instagram.com/rinaldi_r7/" class="text-decoration-none text-white">Instagram</a></button>
-  		<button class="btn btn-primary"><a href="https://www.twitter.com/paldi07/" class="text-decoration-none text-white">Twitter</a></button>
-  		<button class="btn btn-primary"><a href="https://www.facebook.com/aldii.prtm4/" class="text-decoration-none text-white">Facebook</a></button>
+  		<h3>Credit. :</h3>
+  		<button class="btn btn-primary"><a href="https://www.instagram.com/alx.dyy/" class="text-decoration-none text-white">Instagram</a></button>
+  		<button class="btn btn-primary"><a href="https://aldipratama.vercel.app/" class="text-decoration-none text-white">Portfolio</a></button>
   	</div>
   </div>
 
